fix z-index

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -30,6 +30,7 @@ p {
   background-color: #2d2d2e;
   box-shadow: 0 1px 3px rgba(235, 235, 235, 0.12), 0 1px 1px rgba(207, 207, 207, 0.14),
     0 2px 1px rgba(241, 241, 241, 0.2);
+  z-index: 1;
 }
 
 .search-form {
@@ -115,7 +116,7 @@ p {
 
 .gallery__link:hover,
 .gallery__link:focus {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .gallery-item {
